<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PikiPiki</string>
    <string name="action_settings">Settings</string>
    <string name="motorbike">Motor Bike</string>
    <string name="sync">Sync</string>
    <string name="phone">Phone</string>
    <string name="_0734567843">Phone</string>
    <string name="area">Area</string>
    <string name="reg_date">Reg Date</string>
    <string name="driver_id">Driver Id</string>
    <string name="driver">Driver</string>
    <string name="owner">Owner</string>
    <string name="owner_id">Owner Id</string>
    <string name="search">Search</string>
    <string name="bike_reg_number">Bike Reg Number</string>
    <string name="back_ground_image">Back Ground Image</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="background_image">Background Image</string>
    <string name="empty_string">value</string>
    <string name="number_plate">Number Plate</string>

</resources>