<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewRegNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/motorbike"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/owner"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewDriver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/driver"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/area"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>