<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_fill"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/back_ground_image"
        android:scaleType="fitStart"
        android:src="@drawable/background" />

   

    <LinearLayout         
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="8dp"
        android:layout_marginBottom="0dp"
        android:background="#F0F0F1" android:id="@+id/linearLayout1">
        
		    <EditText
		        android:id="@+id/editTextSearch"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/bike_reg_number"
		        android:maxLines="1" 
		        android:textColorHint="#847cef"
		        android:imeOptions="actionSearch"
		        android:inputType="text"
		        >
		        
		    </EditText>
          
        
    </LinearLayout>
 <!-- <TextView
        android:id="@+id/textViewRegNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextSearch"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/editTextSearch"
        android:layout_marginTop="39dp"
        android:text="@string/motorbike"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="16dp" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/owner_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewOwnerID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewRegNo"
        android:layout_alignRight="@+id/textViewRegNo"
        android:layout_below="@+id/textViewRegNo"
        android:layout_marginTop="16dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/owner"            
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewOwnerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"
            android:text="@string/owner"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="16dp" >

        <TextView
            android:id="@+id/TextView03"
             android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/driver"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewDriverNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driver"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LinearLayout01"
        android:layout_alignRight="@+id/LinearLayout01"
        android:layout_below="@+id/LinearLayout01"
        android:layout_marginTop="16dp" >

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/driver_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewDrriverId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driver_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LinearLayout02"
        android:layout_alignRight="@+id/LinearLayout02"
        android:layout_below="@+id/LinearLayout02"
        android:layout_marginTop="16dp" >

        <TextView
            android:id="@+id/TextView07"
             android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/reg_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViiewRegDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LinearLayout03"
        android:layout_alignRight="@+id/LinearLayout03"
        android:layout_below="@+id/LinearLayout03"
        android:layout_marginTop="16dp" >

        <TextView
            android:id="@+id/TextView09"
             android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LinearLayout04"
        android:layout_alignRight="@+id/LinearLayout04"
        android:layout_below="@+id/LinearLayout04"
        android:layout_marginTop="16dp" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0734567843"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
 -->

    <Button
        android:id="@+id/btnTest"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        android:onClick="search"
        android:text="@string/search" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnTest"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" >
    </ListView>

</RelativeLayout>